# task-reminder

./: Cargo.toml  README.md  install.sh
src/: commands.rs  config.rs  db.rs  main.rs  notifications.rs  style.rs  window.rs
src/window/: editor.rs  search.rs  settings.rs  sidebar.rs
