[package]
name = "wallpaper-tasks"
version = "0.1.0"
edition = "2021"
description = "A task manager that lives on your desktop wallpaper"
license = "GPL-3.0-or-later"
authors = ["Wallpaper Tasks Contributors"]

[dependencies]
gtk = { version = "0.11", package = "gtk4" }
adw = { version = "0.9", package = "libadwaita", features = ["v1_6"] }
gtk4-layer-shell = "0.8"
glib = "0.22"
gio = { version = "0.22", package = "gio" }
gdk = { version = "0.11", package = "gdk4" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
dirs = "6"
anyhow = "1"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
